<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_advice"
        android:icon="@drawable/ic_lightbulb_outline_black_24dp"
        android:title="@string/title_advice" />

    <item
        android:id="@+id/navigation_mail"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        android:title="@string/title_mail" />

</menu>